--- a/src/styles/_tabs.scss
+++ b/src/styles/_tabs.scss
@@ -1,3 +1,5 @@
+@use 'mixins' as *;
+
 .tab-navegation {
     display: flex;
     justify-content: center;
@@ -24,22 +26,6 @@
 .tabs {
     padding-top: 120px;
     font-family: Roboto, sans-serif;
-}
-
-@mixin tab-config {
-    display: none;
-    margin-top: 80px;
-    &-name {
-        color: #f9f9f9;
-        margin-bottom: 12px;
-        font-size: 24px;
-        line-height: 34px;
-        text-transform: uppercase
-    }
-
-    &--show {
-        display: grid;
-    }
 }
 
 [data-tab-id="related"] {
