--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -20,7 +20,12 @@
     &__link {
         color: #4980d7;
         text-decoration: none;
-        margin-right: 10px;
+        margin: 0 5px;
+        transition: color .2s ease-in-out;
+        
+        &:hover {
+            color: lighten(#4980d7, 10%);
+        }
 
     }
 
