--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,12 +1,22 @@
 .hero {
     font-family: Roboto, sans-serif;
     padding-top: 120px;
-    position: relative;
+    user-select: none;
+    * {
+        position: relative;
+    }
     height: 90vh;
+
+    &__title {
+        color: #f9f9f9;
+        font-weight: 500;
+        letter-spacing: 1px;
+        margin-bottom: 16px;
+    }
 
     &::before {
         content: "";
-        background: linear-gradient(transparent, transparent, #00050d), url("../../src/images/hero_image.webp") no-repeat center;
+        background: linear-gradient(transparent, transparent, #00050d), url("../../src/images/hero-background-image.jpg") no-repeat center;
         background-size: cover;
         position: absolute;
         top: 0px;
@@ -16,13 +26,44 @@
         opacity: 0.75;
     }
 
+    &__buttons-group {
+        margin-top: 24px;
+        display: flex;
+        max-width: 350px;
+        justify-content: space-between;
+    }
+
+    &__button {
+        padding: 13px 8px;
+        text-transform: uppercase;
+        background-color: #255db7;
+        border: none;
+        border-radius: 4px;
+        letter-spacing: 1px;
+        font: inherit;
+        color: #f9f9f9;
+        cursor: pointer;
+        transition: background-color .2s ease;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+
+        &:hover {
+            background-color: lighten(#255db7, 7%);
+        }
+
+        &--dark {
+            background-color: #29292d;
+
+            &:hover {
+                background-color: #242427;
+            }
+        }
+    }
+
     &__branding-image {
-        position: relative;
         max-width: 341px;
     }
 
     &__text {
-        position: relative;
         color: #f9f9f9;
         max-width: 650px;
         margin-bottom: 16px;
@@ -38,7 +79,6 @@
             display: flex;
             max-width: 240px;     
             justify-content: space-between;
-            position: relative;
             margin-bottom: 8px;
 
             &:last-child {
