--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -4,6 +4,7 @@
     &-name {
         color: #f9f9f9;
         margin-bottom: 12px;
+        letter-spacing: 1px;
         font-size: 24px;
         line-height: 34px;
         text-transform: uppercase
