--- a/src/styles/_tabs.scss
+++ b/src/styles/_tabs.scss
@@ -6,12 +6,14 @@
 
     &-button {
         cursor: pointer;
-        text-transform: uppercase;
         font: inherit;
+        font-size: 18px;
+        text-transform: uppercase;
         font-weight: 700;
         color: #f9f9f9;
         background: none;
         border: none;
+        letter-spacing: 1px;
         margin: 0 1vw;
         padding-bottom: 5px;
         border-bottom: 5px solid transparent;
