--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,38 @@
+@use 'header';
 @use 'hero';
 @use 'tabs';
 @use 'footer';
 
-* {
+*, *::before, *::after {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+.button {
+    padding: 13px 8px;
+    text-transform: uppercase;
+    background-color: #255db7;
+    border: none;
+    border-radius: 4px;
+    letter-spacing: 1px;
+    font: inherit;
+    color: #f9f9f9;
+    cursor: pointer;
+    transition: background-color .2s ease;
+    box-shadow: 0 4px 8px 2px rgba(0,5,13,.5);
+
+    &:hover {
+        background-color: lighten(#255db7, 7%);
+    }
+
+    &--dark {
+        background-color: #29292d;
+
+        &:hover {
+            background-color: #242427;
+        }
+    }
 }
 
 ul {
