--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -7,10 +7,51 @@
         letter-spacing: 1px;
         font-size: 24px;
         line-height: 34px;
-        text-transform: uppercase
+        text-transform: uppercase;
+
+        @media (max-width: 768px) {
+            font-size: 20px;
+            line-height: 30px;
+        }
     }
 
     &--show {
         display: grid;
+    }
+}
+
+@mixin button {
+    padding: 13px 8px;
+    text-transform: uppercase;
+    background-color: #255db7;
+    border: none;
+    border-radius: 4px;
+    letter-spacing: 1px;
+    font: inherit;
+    color: #f9f9f9;
+    cursor: pointer;
+    transition: background-color .2s ease;
+    box-shadow: 0 4px 8px 2px rgba(0,5,13,.5);
+
+    @media (max-width: 768px) {
+        display: block;
+        width: 65%;
+        margin: 10px auto;
+    }
+
+    &:hover {
+        background-color: lighten(#255db7, 7.2%);
+    }
+
+    &--dark {
+        background-color: #29292d;
+
+        @media (max-width:768px) {
+            display: none;
+        }
+
+        &:hover {
+            background-color: #26262a;
+        }
     }
 }
