adicionando minificação de arquivos

--- a/source/sass/_hero.scss
+++ b/source/sass/_hero.scss
@@ -19,7 +19,7 @@
     }
 
     &__background {
-        background: linear-gradient(transparent, transparent, #00050d), url("../../src/images/hero-background-image.jpg") no-repeat center;
+        background: linear-gradient(transparent, transparent, #00050d), url("../images/hero-background-image.jpg") no-repeat center;
         background-size: 100vw;
         position: absolute;
         top: 0;
