--- a/source/sass/_tabs.scss
+++ b/source/sass/_tabs.scss
@@ -50,6 +50,7 @@
 
             @media (max-width: 768px) {
                 grid-template-columns: 1fr 1fr;
+                gap: 12px;
             }
     
             &__movie, &__movie-image {
