--- a/source/sass/_header.scss
+++ b/source/sass/_header.scss
@@ -1,8 +1,12 @@
-.header {
+.header-container {
     position: sticky;
     top: 0;
     left: 0;
     z-index: 1;
+    height: 70px;
+}
+
+.header {
     padding: 0px 48px;
     text-align: center;
     display: flex;
@@ -11,18 +15,20 @@
     background-color: #00050d;
     backdrop-filter: blur(8px);
     border-bottom: 1px solid rgba(255, 255, 255, .5);
+    transition: all .3s ease;
 
     @media (max-width: 768px) {
         display: none;
     }
 
-    .header, &-navegation, &-navegation__list, .header-navegation__item {
-        height: 70px;
+    &, &-navegation, &-navegation__list, .header-navegation__item {
+        height: 100%;
     }
 
     &-navegation {
 
         &__arrow {
+            width: 15px;
             margin-left: 6px;
             transition: all .3s ease;
         }
@@ -50,7 +56,7 @@
                     transform: rotate(180deg);
                 }
                 .header-navegation__submenu {
-                    display: block;
+                    visibility: visible;
                 }
             }
         }
@@ -60,7 +66,7 @@
         }
 
         &__submenu {
-            display: none;
+            visibility: hidden;
             text-align: start;
             position: absolute;
             width: 150px;
@@ -69,6 +75,7 @@
             border-bottom-left-radius: 4px;
             border-bottom-right-radius: 4px;
             box-shadow: 0 4px 8px 2px rgba(0, 5, 13, .5);
+            transition: transform .3s ease;
 
             &-item {
                 margin: 6px 16px;
@@ -90,14 +97,8 @@
     }
 
     &-branding {
-        width: 80px;
+        transition: all .3s ease;
+        height: 45px;
+        width: auto;
     }
-}
-
-#genre-submenu {
-    transform: translate(-25px, 132px);
-}
-
-#lang-submenu {
-    transform: translate(-55px, 76px);
 }
