--- a/source/sass/_header.scss
+++ b/source/sass/_header.scss
@@ -6,99 +6,133 @@
     height: 70px;
 }
 
+.navegation {
+    display: flex;
+    transition: height .3s ease;
+
+    &__arrow {
+        width: 15px;
+        margin-left: 6px;
+        transition: all .3s ease;
+    }
+
+    &__list {
+        margin-left: 40px;
+        display: flex;
+        transition: margin .3s ease;
+    }
+
+    &__item {
+        display: flex;
+        cursor: pointer;
+        color: #f9f9f9;
+        margin: 0 12px;
+        letter-spacing: 1px;
+        font-weight: bold;
+        transition: margin .3s ease;
+
+        &:hover {
+            .navegation__arrow {
+                transform: rotate(180deg);
+            }
+            .navegation__submenu {
+                visibility: visible;
+            }
+        }
+    }
+
+    &__icon {
+        font-size: 32px;
+        color: #f9f9f9;
+        cursor: pointer;
+    }
+
+    &__submenu {
+        visibility: hidden;
+        text-align: start;
+        position: absolute;
+        width: 150px;
+        background-color: #010713;
+        border: 1px solid rgba(255, 255, 255, .5);
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+        box-shadow: 0 4px 8px 2px rgba(0, 5, 13, .5);
+        transition: transform .3s ease;
+
+        &-item {
+            margin: 6px 16px;
+            padding: 6px 0px 6px 8px;
+            border-radius: 4px;
+
+            a {
+                text-decoration: none;
+                color: #f9f9f9;
+                font: inherit;
+            }
+            
+            &:hover {
+                background-color: #161a2a;
+                
+            }
+        }
+    }
+
+    &-container {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+    }
+
+}
+
+.branding {
+    cursor: pointer;
+    transition: height .3s ease;
+    height: 45px;
+    width: auto;
+}
+
 .header {
     padding: 0px 48px;
     text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    
+    &, & > * {
+        display: flex;
+        align-items: center;
+
+    }
+
     background-color: #00050d;
     backdrop-filter: blur(8px);
     border-bottom: 1px solid rgba(255, 255, 255, .5);
-    transition: all .3s ease;
+    transition: height .3s ease;
 
     @media (max-width: 768px) {
         display: none;
     }
 
-    &, &-navegation, &-navegation__list, .header-navegation__item {
+    &, .navegation, &-navegation__list, .navegation__item, .account-and-search, .account-and-search__form {
         height: 100%;
     }
+}
 
-    &-navegation {
-
-        &__arrow {
-            width: 15px;
-            margin-left: 6px;
-            transition: all .3s ease;
-        }
-
-        &__list {
-            display: flex;
-            align-items: center;
-        }
-
-        &__item {
-            display: flex;
-            align-items: center;
-            cursor: pointer;
-            color: #f9f9f9;
-            margin: 0 8px;
-            letter-spacing: 1px;
-            font-weight: bold;
-
-            &:last-child {
-                margin-left: 16px;
-            }
-
-            &:hover {
-                .header-navegation__arrow {
-                    transform: rotate(180deg);
-                }
-                .header-navegation__submenu {
-                    visibility: visible;
-                }
-            }
-        }
-
-        &__icon {
-            font-size: 30px;
-        }
-
-        &__submenu {
-            visibility: hidden;
-            text-align: start;
-            position: absolute;
-            width: 150px;
-            background-color: #010713;
-            border: 1px solid rgba(255, 255, 255, .5);
-            border-bottom-left-radius: 4px;
-            border-bottom-right-radius: 4px;
-            box-shadow: 0 4px 8px 2px rgba(0, 5, 13, .5);
-            transition: transform .3s ease;
-
-            &-item {
-                margin: 6px 16px;
-                padding: 6px 0px 6px 8px;
-                border-radius: 4px;
-
-                a {
-                    text-decoration: none;
-                    color: #f9f9f9;
-                    font: inherit;
-                }
-                
-                &:hover {
-                    background-color: #161a2a;
-                    
-                }
-            }
-        }
+.account-and-search {
+    &, &__form {
+        display: flex;
     }
 
-    &-branding {
-        transition: all .3s ease;
-        height: 45px;
-        width: auto;
+    &__form {
+        margin-right: 24px;
+    }
+
+    &__input {
+        transition: padding .3s ease;
+        background-color: #33373d;
+        width: 230px;
+        padding: 9px 10px;
+        outline: none;
+        border: 1px solid #3b3f42;
+        border-radius: 4px;
+        color: #f9f9f9;
     }
 }
