--- a/source/sass/_tabs.scss
+++ b/source/sass/_tabs.scss
@@ -45,7 +45,7 @@
         &-content {
             margin-top: 20px;
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
             gap: 24px;
 
             @media (max-width: 768px) {
