--- a/source/sass/_tabs.scss
+++ b/source/sass/_tabs.scss
@@ -20,6 +20,7 @@
 
         @media (max-width: 768px) {
             margin: 0 3vw;
+            font-size: 16px;
         }
 
         &--is-active {
