aplicando font-weight correto aos titulos das abas

--- a/source/sass/_mixins.scss
+++ b/source/sass/_mixins.scss
@@ -6,6 +6,7 @@
         margin-bottom: 12px;
         letter-spacing: 1px;
         font-size: 24px;
+        font-weight: 700;
         line-height: 34px;
         text-transform: uppercase;
 
