--- a/source/sass/_hero.scss
+++ b/source/sass/_hero.scss
@@ -19,7 +19,6 @@
     }
 
     &__background {
-        height: 40vh;
         background: linear-gradient(transparent, transparent, #00050d), url("../images/hero-background-image.jpg") no-repeat center;
         background-size: 100vw;
         position: absolute;
@@ -32,6 +31,10 @@
         @media (max-width: 768px) {
             height: 50vw;
             opacity: 0.75;
+        }
+        
+        @media (max-width: 768px) and (min-width: 1024px) {
+            height: 40vh;
         }
     }
 
