--- a/source/sass/_footer.scss
+++ b/source/sass/_footer.scss
@@ -1,6 +1,10 @@
 .footer {
     margin-top: 180px;
 
+    @media (max-width: 768px) {
+        margin-top: 120px;
+    }
+
     &__container {
         text-align: center;
     }
@@ -17,8 +21,9 @@
         text-align: left;
 
         @media (max-width: 768px) {
-            display: block;
-            text-align: center;
+            display: flex;
+            justify-content: center;
+            flex-flow: row wrap;
         }
     }
 
@@ -31,7 +36,7 @@
         @media (max-width: 768px) {
             font-size: 14px;
             line-height: 24px;
-            display: block;
+            
         }
         
         &:hover {
