--- a/source/sass/_footer.scss
+++ b/source/sass/_footer.scss
@@ -28,6 +28,11 @@
             justify-content: center;
             flex-flow: row wrap;
         }
+
+        @media (min-width: 768px) and (max-width:1279px) {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
     }
 
     &__link {
