--- a/source/sass/_mixins.scss
+++ b/source/sass/_mixins.scss
@@ -15,7 +15,7 @@
         line-height: 34px;
 
         @media (max-width: 768px) {
-            font-size: 18px;
+            font-size: 20px;
             line-height: 28px;
         }
     }
@@ -41,7 +41,7 @@
     @media (max-width: 768px) {
         display: block;
         width: 65%;
-        margin: 10px auto;
+        margin: 10px 0;
     }
 
     &:hover {
