--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -15,7 +15,7 @@
     position: fixed;
     width: 100vw;
     height: 100vh;
-    background-color: rgba(0, 5, 13, .1);
+    background-color: #00050d1a;
 }
 
 ul {
