--- a/source/sass/_tabs.scss
+++ b/source/sass/_tabs.scss
@@ -41,6 +41,7 @@
         background-repeat: no-repeat;
         background-size: contain;
         width: 23.55%;
+        aspect-ratio: 16/9;
         margin-right: 16px;
         counter-increment: gallery-cell;
 
