--- a/source/sass/_mixins.scss
+++ b/source/sass/_mixins.scss
@@ -28,7 +28,9 @@
 @mixin button {
     padding: 13px 8px;
     text-transform: uppercase;
-    background-color: #255db7;
+    position: relative;
+	overflow: hidden;
+    background-color: #2360c2;
     border: none;
     border-radius: 4px;
     letter-spacing: 1px;
@@ -38,25 +40,57 @@
     transition: background-color .2s ease;
     box-shadow: 0 4px 8px 2px rgba(0,5,13,.5);
 
+    &::before {
+        content: "";
+        position: absolute;
+        background-color: rgba(0,0,0,.1);
+        width: 10%;
+        height: 25%;
+        border-radius: 50%;
+        z-index: 1;
+        top: 35%;
+        left: 45%;
+        -webkit-transform: scale(0);
+        transform: scale(0);
+    }
+
+    &:hover {
+        background: darken(#255db7, 2%);
+
+        &::before {
+            -webkit-transform: scale(12);
+            transform: scale(12);
+            -webkit-transition: border-radius .5s .5s,-webkit-transform .5s;
+            transition: border-radius .5s .5s,-webkit-transform .5s;
+            transition: transform .5s,border-radius .5s .5s;
+            transition: transform .5s,border-radius .5s .5s,-webkit-transform .5s;
+        }
+
+        &::after {
+            content: "";
+            position: absolute;
+            z-index: 2;
+            left: 50%;
+            -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+        }
+    }
+
     @media (max-width: 768px) {
         display: block;
         width: 65%;
         margin: 10px 0;
     }
 
-    &:hover {
-        background-color: lighten(#255db7, 7.2%);
-    }
-
     &--dark {
-        background-color: #29292d;
+        background-color: #323236;
 
         @media (max-width:768px) {
             display: none;
         }
 
         &:hover {
-            background-color: #26262a;
+            background: darken(#323236, 2%);
         }
     }
 }
